<resources>
    <string name="app_name">QuizApp</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="task">Task</string>
    <string name="settings">Settings</string>
    <string name="quiz">Quiz</string>
    <string name="todo">TODO</string>
    <string name="questions_amount">Questions amount: </string>
    <string name="_0">0</string>
    <string name="category">Category</string>
    <string name="start">start</string>
    <string name="categorywithtwopoints">Category : </string>
    <string name="correct_answers">Correct answers:</string>
    <string name="number">8/10</string>
    <string name="_12_may_2019_20_32">12 may 2019 20:32</string>
    <string name="share_this_app">Share this app</string>
    <string name="rate_us">Rate us</string>
    <string name="leave_feedback">Leave feedback</string>
    <string name="clear_history">Clear history</string>
    <string-array name="All">
        <item>All</item>
        <item>Buble</item>
        <item>Bin</item>
        <item>Bable</item>
    </string-array>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="geography">Geography</string>
    <string name="colombo">Colombo</string>
    <string name="skip">Skip</string>
    <string name="mixed">Mixed</string>
    <string name="result">Result</string>
    <string name="all">All</string>
    <string name="_18">18</string>
    <string name="_100">100%</string>
    <string name="difficulty">Difficulty :</string>
    <string name="correct_answerss">Correct answers :</string>
    <string name="results">Result :</string>
    <string name="finish">Finish</string>
    <string name="questions_amounts">Questions amounts:</string>
    <string name="main">Main</string>
    <string name="history">History</string>
    <string name="profile">Profile</string>
    <string name="_10">10</string>
    <string name="False">False</string>
    <string name="True">True</string>
</resources>