<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".presentation.ui.fragments.task.MainFragment">

    <Toolbar
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/tv_main_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/quiz"
            android:textColor="@color/black"
            android:textSize="24sp" />

    </Toolbar>

    <ImageView
        android:id="@+id/arImg"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_marginTop="90dp"
        android:contentDescription="@string/todo"
        android:src="@drawable/ar_tut"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="60dp" />

    <TextView
        android:id="@+id/questTv"
        style="@style/liteTv"
        android:text="@string/questions_amounts"
        app:layout_constraintStart_toEndOf="@+id/guideline"
        app:layout_constraintTop_toBottomOf="@+id/arImg" />

    <TextView
        android:id="@+id/amountTv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="37dp"
        android:text="@string/_10"
        android:textColor="@color/black"
        android:textSize="20sp"
        app:layout_constraintStart_toEndOf="@+id/questTv"
        app:layout_constraintTop_toBottomOf="@+id/arImg" />

    <SeekBar
        android:id="@+id/seekBar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="48dp"
        android:layout_marginTop="20dp"
        android:max="50"
        android:min="1"
        android:progress="10"
        app:layout_constraintTop_toBottomOf="@+id/questTv"
        tools:ignore="UnusedAttribute" />

    <TextView
        android:id="@+id/categoryTv"
        style="@style/liteTv"
        android:layout_marginTop="20dp"
        android:text="@string/category"
        app:layout_constraintStart_toEndOf="@+id/guideline"
        app:layout_constraintTop_toBottomOf="@+id/seekBar" />

    <Spinner
        android:id="@+id/categorySpinner"
        android:layout_width="match_parent"
        android:layout_height="44dp"
        android:layout_marginHorizontal="60dp"
        android:layout_marginTop="10dp"
        android:backgroundTint="@color/black"
        app:layout_constraintTop_toBottomOf="@+id/categoryTv" />

    <TextView
        android:id="@+id/difficultyTv"
        style="@style/liteTv"
        android:layout_marginTop="20dp"
        android:text="@string/difficulty"
        app:layout_constraintStart_toEndOf="@+id/guideline"
        app:layout_constraintTop_toBottomOf="@+id/categorySpinner" />

    <Spinner
        android:id="@+id/difficultySpinner"
        android:layout_width="match_parent"
        android:layout_height="44dp"
        android:layout_marginHorizontal="60dp"
        android:layout_marginTop="10dp"
        android:backgroundTint="@color/black"
        app:layout_constraintTop_toBottomOf="@+id/difficultyTv" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_start"
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:layout_marginHorizontal="80dp"
        android:layout_marginTop="65dp"
        android:text="@string/start"
        android:textStyle="bold"
        app:layout_constraintTop_toBottomOf="@+id/difficultySpinner" />

</androidx.constraintlayout.widget.ConstraintLayout>