<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="116dp">

    <androidx.cardview.widget.CardView
        android:id="@+id/cardView"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:layout_marginHorizontal="20dp"
        android:layout_marginTop="10dp"
        app:cardCornerRadius="4dp"
        app:cardElevation="4dp"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/categoryItem"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/categorywithtwopoints"
                android:textColor="@color/black"
                android:textSize="20sp"
                android:textStyle="bold"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                android:layout_marginTop="8dp"
                android:layout_marginStart="16dp"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/mixed"
                android:textColor="@color/black"
                android:textSize="20sp"
                android:textStyle="bold"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toEndOf="@+id/categoryItem"
                android:layout_marginTop="8dp"
                android:layout_marginStart="2dp"/>

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_vector"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginTop="20dp"
                android:layout_marginEnd="20dp"
                />

            <TextView
                android:id="@+id/correct"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="12sp"
                android:layout_marginStart="16dp"
                app:layout_constraintStart_toStartOf="parent"
                android:layout_marginTop="13dp"
                android:text="@string/correct_answers"
                app:layout_constraintTop_toBottomOf="@+id/categoryItem"
                />

            <TextView
                android:id="@+id/correctAnswer"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="12sp"
                app:layout_constraintStart_toEndOf="@+id/correct"
                android:layout_marginTop="13dp"
                android:layout_marginStart="4dp"
                android:text="@string/number"
                app:layout_constraintTop_toBottomOf="@+id/categoryItem"
                />

            <TextView
                android:id="@+id/difficultyTvInHistory"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="12sp"
                android:layout_marginStart="16dp"
                app:layout_constraintStart_toStartOf="parent"
                android:layout_marginTop="6dp"
                android:text="@string/difficulty"
                app:layout_constraintTop_toBottomOf="@+id/correct"
                />

            <TextView
                android:id="@+id/difficultyAnswer"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="12sp"
                app:layout_constraintStart_toEndOf="@+id/difficultyTvInHistory"
                android:layout_marginTop="6dp"
                android:layout_marginStart="4dp"
                android:text="@string/all"
                app:layout_constraintTop_toBottomOf="@+id/correctAnswer"
                />

            <TextView
                android:id="@+id/dataWas"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="9sp"
                android:layout_marginTop="6dp"
                android:layout_marginStart="4dp"
                android:text="@string/_12_may_2019_20_32"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                android:layout_margin="10dp"
                tools:ignore="SmallSp" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>
</androidx.constraintlayout.widget.ConstraintLayout>