<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/white"
    android:orientation="vertical">

    <TextView
        android:id="@+id/tv_question"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="82dp"
        android:layout_marginVertical="20dp"
        android:gravity="center"
        android:textColor="@color/black"
        android:textSize="24sp"
        app:layout_constraintTop_toBottomOf="@+id/guideline2"
        tools:text="What is the largest city and commerical capital of Sri Lanka ?" />


    <TextView
        android:id="@+id/tv_true"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginHorizontal="50dp"
        android:background="@drawable/default_answer"
        android:gravity="center"
        android:text="@string/True"
        android:textColor="@color/purple_700"
        android:textSize="14sp" />


    <TextView
        android:id="@+id/tv_false"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginHorizontal="50dp"
        android:layout_marginVertical="20dp"
        android:background="@drawable/default_answer"
        android:gravity="center"
        android:text="@string/False"
        android:textColor="@color/purple_700"
        android:textSize="14sp" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_skip"
        android:layout_width="100dp"
        android:layout_height="60dp"
        android:layout_gravity="center"
        android:layout_marginTop="20dp"
        android:text="@string/skip"
        android:textAllCaps="false"
        android:textSize="16sp"
        android:textStyle="bold"
        app:cornerRadius="30dp" />

</LinearLayout>